--- a/OIS Dashboard/Base.lproj/Main.storyboard
+++ b/OIS Dashboard/Base.lproj/Main.storyboard
@@ -19,8 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Gy-qa-U6p">
-                                <rect key="frame" x="473" y="240" width="975" height="372"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00 AM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Gy-qa-U6p">
+                                <rect key="frame" x="96" y="240" width="1728" height="372"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="200"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -48,31 +48,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ug-LX-L9d">
-                                <rect key="frame" x="200" y="949" width="92" height="71"/>
+                                <rect key="frame" x="60" y="949" width="408" height="71"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="50"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="O" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqR-XN-FsX">
-                                <rect key="frame" x="96" y="949" width="39" height="71"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="50"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHp-gn-mfN">
-                                <rect key="frame" x="152" y="949" width="37" height="71"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="50"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="/" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LgD-ZD-1XV">
-                                <rect key="frame" x="135" y="953" width="19" height="57"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="40"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxb-iB-U7Z">
@@ -116,18 +95,18 @@
                         <color key="backgroundColor" red="0.064598160560000006" green="0.064598160560000006" blue="0.064598160560000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
-                        <outlet property="ADay" destination="fHp-gn-mfN" id="hwW-hm-eSU"/>
-                        <outlet property="ODay" destination="hqR-XN-FsX" id="d4G-yx-b8n"/>
                         <outlet property="classStartButton" destination="lxb-iB-U7Z" id="ENc-Hh-EhM"/>
                         <outlet property="classroonNumber" destination="Cig-9c-G58" id="LBu-MQ-fIO"/>
                         <outlet property="date" destination="FIO-AX-2BZ" id="Zni-3F-RqQ"/>
+                        <outlet property="dayLabel" destination="4Ug-LX-L9d" id="cei-ef-bhj"/>
                         <outlet property="teacherName" destination="WQx-Fe-YcO" id="TEu-aN-ZZJ"/>
                         <outlet property="time" destination="2Gy-qa-U6p" id="19P-pM-ax9"/>
+                        <segue destination="mUW-eB-W2H" kind="show" identifier="showSettings" id="4Tf-S2-DgB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0de-ql-Sdh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="105" y="-435"/>
+            <point key="canvasLocation" x="52" y="-769"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="c38-7v-Spt">
@@ -266,6 +245,7 @@
                         <viewLayoutGuide key="safeArea" id="jSM-sK-e4P"/>
                         <color key="backgroundColor" red="0.053073073880000002" green="0.051019803420000003" blue="0.052172414290000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="HIF-bL-Pka"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aHX-hu-L14" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
